--- a/src/index.html
+++ b/src/index.html
@@ -41,3 +41,4 @@ import Spinner from './spinner.html'
   transform: scale(0.01) !important;
   transition: all 0.25s ease-in-out !important;
 }
+</style>
