Renaming step 1, plus adding export to Indicator

--- a/src/Indicator.html
+++ b/src/Indicator.html
@@ -4,7 +4,13 @@
 
 <script>
 //import Arrow from './arrow'
-import Spinner from './spinner.html'
+import Spinner from './Spinner.html'
+
+export default {
+  components: {
+    Spinner
+  }
+}
 </script>
 
 <style>
