--- a/src/Indicator.html
+++ b/src/Indicator.html
@@ -15,28 +15,25 @@ export default {
 
 <style>
 .indicator {
-  position: absolute;
-  left: 50%;
-  margin-left: -25px;
+  width: 26px;
+  height: 26px;
   padding: 9px;
-  z-index: 10001;
+  border-radius: 50%;
   background-color: #fff;
-  overflow: hidden;
-  border-radius: 999px;
-  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.19), 0 6px 13px 0 rgba(0,0,0,0.24);
-  position: fixed;
+  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 13px 0 rgba(0, 0, 0, 0.2);
+}
+  /*position: fixed;
   top: 0;
+  z-index: 10001;
   perspective: 1000;
   backface-visibility: hidden;
   transform: scale(1);
-  width: 25px;
-  height: 25px;
+  overflow: hidden;
 }
 
 .refresh-main-animat {
-/* transition: box-shadow 0.38s cubic-bezier(0.4, 0, 0.2, 1) */
-/* -webkit-transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1) */
   transition: all 0.43s cubic-bezier(.08,.55,.81,1.8)
+  //transition: box-shadow 0.38s cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .refresh-nav {
@@ -46,5 +43,5 @@ export default {
   opacity: 0;
   transform: scale(0.01) !important;
   transition: all 0.25s ease-in-out !important;
-}
+}*/
 </style>
