--- a/src/Spinner.html
+++ b/src/Spinner.html
@@ -1,138 +1,43 @@
-<div class="spinner-wrapper">
-  <div class="spinner-main">
-    <div class="spinner-left">
-      <div class="half-circle"></div>
+<div class="spinner">
+  <div class="inner-rotate">
+    <div class="left">
+      <div class="half-circle" style="{{ halfCircleStyles.left }}"></div>
     </div>
-    <div class="spinner-right">
-      <div class="half-circle"></div>
+    <div class="right">
+      <div class="half-circle" style="{{ halfCircleStyles.right }}"></div>
     </div>
   </div>
 </div>
 
+<script>
+  const makeBorderRules = (color, side) =>
+    `border-top-color: ${color}; border-${side}-color: ${color};`
+
+  export default {
+    data () {
+      return {
+        color: '#2196f3'
+      }
+    },
+
+    computed: {
+      halfCircleStyles: color => {
+        return {
+          left: makeBorderRules(color, 'left'),
+          right: makeBorderRules(color, 'right')
+        }
+      }
+    }
+  }
+</script>
+
 <style>
-.spinner-main {
-  width: 25px;
-  height: 25px;
-  position: relative;
-}
-
-.spinner-main .spinner-left,
-.spinner-main .spinner-right {
-  position: absolute;
-  top: 0;
-  height: 25px;
-  width: 13px;
-  overflow: hidden;
-}
-
-.spinner-main .spinner-left {
-  left: 0;
-}
-
-.spinner-main .spinner-left .half-circle {
-  left: 0;
-  border-right-color: transparent;
-}
-
-.spinner-main .spinner-right {
-  right: 0;
-}
-
-.spinner-main .spinner-right .half-circle {
-  right: 0;
-  border-left-color: transparent;
-}
-
-.arrow-wrapper {
-  transition: all 0.2s ease;
-}
-
-.half-circle,
-.arrow-main {
-  position: absolute;
-  top: 0;
-  width: 25px;
-  height: 25px;
-  box-sizing: border-box;
-  border-width: 3px;
-  border-style: solid;
-  border-color: #000 #000 transparent;
-  border-radius: 999px;
-}
-.arrow-main {
-  margin-top: 10px;
-  transform: rotate(-37deg);
-  display: none;
-}
-
-.arrow-main:before {
-  content: '';
-  display: block;
-  position: relative;
-  top: 14px;
-  left: 0px;
-  width: 0;
-  height: 0;
-  border-width: 6px 6px;
-  border-style: solid;
-  transform: rotate(-56deg);
-}
-
-.blue-theme .arrow-main {
-  border-color: #2196f3 #2196f3 rgba(0,0,0,0);
-}
-.blue-theme .arrow-main:before {
-  border-color: #2196f3 #fff #fff #fff;
-}
-.blue-theme .spinner-main .spinner-left .half-circle,
-.blue-theme .spinner-main .spinner-right .half-circle {
-  border-top-color: #2196f3;
-}
-.blue-theme .spinner-main .spinner-left .half-circle {
-  border-left-color: #2196f3;
-}
-.blue-theme .spinner-main .spinner-right .half-circle {
-  border-right-color: #2196f3;
-}
-
-.spinner-wrapper {
-  animation: outer-rotate 2.91667s linear infinite;
-}
-
-.spinner-main {
-  animation: sporadic-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1) infinite;
-}
-
-.spinner-main .spinner-left .half-circle,
-.spinner-main .spinner-right .half-circle {
-  animation-iteration-count: infinite;
-  animation-duration: 1.3125s;
-  animation-timing-function: cubic-bezier(0.35, 0, 0.25, 1);
-}
-
-.spinner-main .spinner-left .half-circle {
-  animation-name: left-wobble;
-}
-
-.spinner-main .spinner-right .half-circle {
-  animation-name: right-wobble;
-}
 
 @keyframes outer-rotate {
   100% { transform: rotate(360deg); }
 }
 
-@keyframes left-wobble {
-  0%, 100% { transform: rotate(130deg); }
-  50%      { transform: rotate(-5deg); }
-}
-
-@keyframes right-wobble {
-  0%, 100% { transform: rotate(-130deg); }
-  50%      { transform: rotate(5deg); }
-}
-
-@keyframes sporadic-rotate {
+@keyframes inner-rotate {
   12.5% { transform: rotate(135deg); }
   25%   { transform: rotate(270deg); }
   37.5% { transform: rotate(405deg); }
@@ -142,4 +47,75 @@
   87.5% { transform: rotate(945deg); }
   100%  { transform: rotate(1080deg); }
 }
+
+@keyframes left-expand {
+  0%, 100% { transform: rotate(130deg); }
+  50%      { transform: rotate(-5deg); }
+}
+
+@keyframes right-expand {
+  0%, 100% { transform: rotate(-130deg); }
+  50%      { transform: rotate(5deg); }
+}
+
+.spinner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  animation: outer-rotate 2.91667s linear infinite;
+}
+
+.inner-rotate {
+  animation: inner-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+  height: 100%;
+}
+
+.left .half-circle {
+  animation-name: left-expand;
+}
+
+.right .half-circle {
+  animation-name: right-expand;
+}
+
+.half-circle {
+  animation-duration: 1.3125s;
+  animation-timing-function: cubic-bezier(0.35, 0, 0.25, 1);
+  animation-iteration-count: infinite;
+}
+
+.left,
+.right {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  overflow: hidden;
+}
+
+.right {
+  right: 0
+}
+
+.half-circle {
+  height: 100%;
+  width: 200%;
+  position: absolute;
+  top: 0;
+  box-sizing: border-box;
+  border-width: 3px;
+  border-style: solid;
+  border-color: #000 #000 transparent;
+  border-radius: 50%;
+}
+
+.left .half-circle {
+  border-right-color: transparent;
+}
+
+.right .half-circle {
+  right: 0;
+  border-left-color: transparent;
+}
+
 </style>
