--- a/src/Spinner.html
+++ b/src/Spinner.html
@@ -1,26 +1,29 @@
-<div class="spinner">
-  <div class="inner-rotate">
+<div class="spinner {{ animateClass }}">
+  <div class="inner {{ animateClass }}">
     <div class="left">
-      <div class="half-circle" style="{{ halfCircleStyles.left }}"></div>
+      <div class="half-circle {{ animateClass }}" style="{{ halfCircleStyles.left }}"></div>
     </div>
     <div class="right">
-      <div class="half-circle" style="{{ halfCircleStyles.right }}"></div>
+      <div class="half-circle {{ animateClass }}" style="{{ halfCircleStyles.right }}"></div>
     </div>
   </div>
 </div>
 
 <script>
+// TODO: there is a 1px space between the two sides that shouldn't be there :/
   const makeBorderRules = (color, side) =>
     `border-top-color: ${color}; border-${side}-color: ${color};`
 
   export default {
     data () {
       return {
+        animated: true,
         color: '#2196f3'
       }
     },
 
     computed: {
+      animateClass: animated => animated ? 'animated' : '',
       halfCircleStyles: color => {
         return {
           left: makeBorderRules(color, 'left'),
@@ -58,24 +61,30 @@
   50%      { transform: rotate(5deg); }
 }
 
+.spinner.animated {
+  animation: outer-rotate 2.91667s linear infinite;
+}
+
+.inner.animated {
+  animation: inner-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+}
+
+.left .half-circle.animated {
+  animation-name: left-expand;
+}
+
+.right .half-circle.animated {
+  animation-name: right-expand;
+}
+
 .spinner {
   width: 100%;
   height: 100%;
   position: relative;
-  animation: outer-rotate 2.91667s linear infinite;
 }
 
-.inner-rotate {
-  animation: inner-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+.inner {
   height: 100%;
-}
-
-.left .half-circle {
-  animation-name: left-expand;
-}
-
-.right .half-circle {
-  animation-name: right-expand;
 }
 
 .half-circle {
@@ -91,6 +100,13 @@
   height: 100%;
   width: 50%;
   overflow: hidden;
+}
+
+.left {
+  /* The overflow: hidden separating the left and right caused a 1px distortion between them
+     in some browsers. This smooths it out by letting the left overlap the right by 1px
+   */
+  width: calc(50% + 1px);
 }
 
 .right {
@@ -110,6 +126,11 @@
 }
 
 .left .half-circle {
+  /* compensate the 1px overlap so that the circle remains the correct size and shape
+     see comment on .left
+   */
+  width: calc(200% - 2px);
+
   border-right-color: transparent;
 }
 
