--- a/src/Indicator.html
+++ b/src/Indicator.html
@@ -1,10 +1,13 @@
-<div class="refresh-indicator">
+<div
+  class="refresh-indicator"
+  style="height: {{ size }}px; width: {{ size }}px; padding: {{ padding }}px;"
+>
   {{#if spinning}}
     <div class="arrow-sync-container" style="transform: rotate({{ arrowSyncRotate }}deg);">
-      <Spinner/>
+      <Spinner size="{{ size }}" initialProgress="{{ lastProgressRatio }}"/>
     </div>
   {{else}}
-    <Arrow progressRatio="{{ progressRatio }}"></Arrow>
+    <Arrow size="{{ size }}" progressRatio="{{ progressRatio }}"></Arrow>
   {{/if}}
 </div>
 
@@ -15,6 +18,7 @@ import Spinner from './Spinner.html'
 export default {
   data () {
     return {
+      size: 44,
       progressRatio: undefined,
       lastProgressRatio: 0
     }
@@ -22,9 +26,10 @@ export default {
 
   computed: {
     spinning: progressRatio => progressRatio === undefined,
+    padding: size => Math.floor(size * 0.2046),
     arrowSyncRotate: (spinning, lastProgressRatio) => {
       const ratio = !spinning ? 0 : (lastProgressRatio || 0)
-      return ratio * 315
+      return ratio * 270
     }
   },
 
@@ -42,12 +47,14 @@ export default {
 <style>
 
 .refresh-indicator {
-  width: 26px;
-  height: 26px;
+  box-sizing: border-box;
+  width: 44px;
+  height: 44px;
   padding: 9px;
   border-radius: 50%;
   background-color: #fff;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
 
 .arrow-sync-container {
