pass color to arrowhead and actually test it in the demo like a smart guy this time

--- a/src/Arrow.html
+++ b/src/Arrow.html
@@ -13,7 +13,11 @@
   />
   {{#if progressRatio > 0.3 }}
     <div class="arrow-head-rotate" style="transform: rotate({{ rotate - 136 }}deg);">
-      <ArrowHead size="{{ size }}" sizeRatio="{{ (progressRatio - 0.3) / 0.7 }}"/>
+      <ArrowHead
+        color="{{ color }}"
+        size="{{ size }}"
+        sizeRatio="{{ (progressRatio - 0.3) / 0.7 }}"
+      />
     </div>
   {{/if}}
 </div>
